# Forge-Ai

./: .env.example  .gitignore  README.md
backend/: .env.example  .env.smtp.example  alembic.ini  pyproject.toml  run_server.py
backend/alembic/: env.py
backend/app/: main.py  main_simple.py  persistence.py  server.py
backend/app/agents/: __init__.py  agent_base.py  config.py  exceptions.py  orchestrator.py  registry.py  schemas.py
backend/app/ai/: config.py  exceptions.py
backend/app/approval/: __init__.py  approval_engine.py  models.py  schemas.py  timeout_manager.py
backend/app/core/: config.py  dependencies.py  logging.py  security.py
backend/app/database/: base.py  session.py
backend/app/dependencies/: ai.py  common.py
backend/app/developer/: __init__.py  backup.py  cli.py  config.py  diagnostics.py  installer.py  plugins.py  sdk.py  templates.py
backend/app/exceptions/: __init__.py  base.py  handlers.py
backend/app/execution/: __init__.py  checkpoint_manager.py  dispatcher.py  execution_logger.py  execution_runtime.py  execution_summary.py  models.py  progress_tracker.py  rollback_engine.py  validation_engine.py
backend/app/experience/: __init__.py  activity.py  notifications.py  onboarding.py  search.py  settings.py
backend/app/infrastructure/: __init__.py  authorization.py  caching.py  email.py  error_handling.py  logging_config.py  notifications.py  observability.py  security.py  storage.py  tasks.py
backend/app/learning/: __init__.py  experience_collector.py  experience_memory.py  failure_analyzer.py  (+6 more)
backend/tests/: conftest.py
(+461 files in other folders)
